Modificar tilde de la palabra Observacion

--- a/SIGOFCv3/Areas/Supervision/Views/ManInfSuspension/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInfSuspension/AddEdit.cshtml
@@ -119,7 +119,7 @@
                                                 <br />
                                             </div>
                                             <div class="col-md-12">
-                                                <div class="card-header text-small">Observacion</div>
+                                                <div class="card-header text-small">Observación</div>
                                             </div>
                                             <div class="col-md-12">
                                                 @Html.TextAreaFor(m => m.txtObservacion, 8, 1, new { @class = "form-control form-control-sm" })
