--- a/SIGOFCv3/Areas/THabilitante/Views/ManBalanceExtraccion/_BExtraccionKardex.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManBalanceExtraccion/_BExtraccionKardex.cshtml
@@ -65,7 +65,7 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-12">
-                        <label for="txtObservacion" class="text-small">Observacion</label>
+                        <label for="txtObservacion" class="text-small">Observación</label>
                         @Html.TextArea("txtObservacion", "", new { @class = "form-control form-control-sm", rows = "3" })
                     </div>
                 </div>
