--- a/SIGOFCv3/Areas/THabilitante/Views/ManBalanceExtraccion/_BExtraccionMaderable.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManBalanceExtraccion/_BExtraccionMaderable.cshtml
@@ -126,7 +126,7 @@
                 </div>
                 <div class="form-row trObservacion" style="display:none;">
                     <div class="form-group col-md-12">
-                        <label for="txtObservacion" class="text-small">Observacion *</label>
+                        <label for="txtObservacion" class="text-small">Observación *</label>
                         @Html.TextArea("txtObservacion", "", new { @class = "form-control form-control-sm", rows = "3", onkeypress = "return utilSigo.checkLetter(event);", maxlength="100" })
                     </div>
                 </div>
