--- a/SIGOFCv3/Areas/THabilitante/Views/ManPreviosAlerta/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManPreviosAlerta/AddEdit.cshtml
@@ -250,7 +250,7 @@
                                             <th>Documento</th>
                                             <th>Fecha Documento</th>
                                             <th>Cargo</th>
-                                            <th>Observacion</th>
+                                            <th>Observación</th>
                                             <!--<th>Activo</th>-->
                                             <th>Tipo Funcionario</th>
                                             <!--<th>Supuestos</th>-->
@@ -348,7 +348,7 @@
                                             <th>Documento</th>
                                             <th>Fecha Documento</th>
                                             <th>Cargo</th>
-                                            <th>Observacion</th>
+                                            <th>Observación</th>
                                             <th>Activo</th>
                                         </tr>
                                     </thead>
