--- a/SIGOFCv3/Areas/THabilitante/Views/ManTHabilitante/_shared/_renderEspeciesEstablecidas.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManTHabilitante/_shared/_renderEspeciesEstablecidas.cshtml
@@ -14,7 +14,7 @@
     _renderEspeciesEstablecidas.fnInitDataTable_Detail = function () {
         var columns_label = [], columns_data = [], options = {};
 
-        columns_label = ["Especie", "Sistema de Plantación", "Unidad de Medida", "Cantidad", "Fines", "Observacion"];
+        columns_label = ["Especie", "Sistema de Plantación", "Unidad de Medida", "Cantidad", "Fines", "Observación"];
         columns_data = ["DESC_ESPECIES", "SISTEMA_PLANTACION", "UNIDAD_MEDIDA", "CANTIDAD", "FINES", "OBSERVACION"];
         options = {
             page_length: 10, row_index: true, row_edit: true, row_fnEdit: "_renderEspeciesEstablecidas.fnAddEdit(this)"
