--- a/SIGOFCv3/Areas/Supervision/Views/Alerta/Seguimiento.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/Alerta/Seguimiento.cshtml
@@ -153,7 +153,7 @@
                                                     <th>Fecha</th>
                                                     <th>Documento</th>
                                                     <th>Entidad/Oficina</th>
-                                                    <th>Observacion</th>
+                                                    <th>Observación</th>
                                                 </tr>
                                             </thead>
                                             <tbody></tbody>
