--- a/SIGOFCv3/Areas/Supervision/Views/SeguimientoMuestra/_AddEditMuestra.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/SeguimientoMuestra/_AddEditMuestra.cshtml
@@ -147,7 +147,7 @@
                             </div>
                             <div class="form-row">
                                 <div class="form-group col-md-12">
-                                    <label for="obs" class="text-small">Observacion</label>
+                                    <label for="obs" class="text-small">Observación</label>
                                     @Html.TextAreaFor(m => m.obs, new { @class = "form-control form-control-sm", @rows = "2" })
 
                                 </div>
