--- a/SIGOFCv3/Areas/THabilitante/Views/ManPreviosAlerta/_ItemCOAdministrador.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManPreviosAlerta/_ItemCOAdministrador.cshtml
@@ -72,7 +72,7 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-12">
-                        <label for="txtObservacion" class="text-small">Observacion</label>
+                        <label for="txtObservacion" class="text-small">Observación</label>
                         <textarea type="text" id="txtObservacion" name="txtObservacion" class="form-control form-control-sm" maxlength="8000"></textarea>
                     </div>
 
