Corrección Obs Calidad

--- a/SIGOFCv3/Areas/THabilitante/Views/ManVentanillaAntecedentesExpedientes/Index.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManVentanillaAntecedentesExpedientes/Index.cshtml
@@ -68,7 +68,7 @@
                     <input type="hidden" id="COD_TRAMITE_SITD" name="COD_TRAMITE_SITD" />
                     <div class="form-row">
                         <div class="form-group col-md-12">
-                            <label for="txtItemVert_Vertice" class="text-small">Ant. Expediente SITD</label>
+                            <label for="txtExpediente_SITD" class="text-small">Ant. Expediente SITD</label>                            
                             <input type="text" id="txtExpediente_SITD" class="form-control form-control-sm" disabled />
                         </div>
                     </div>
