Ticket INC 2024-003514, se modifica la llamda del modal de ubigeo desde FiscalizacionNotificacion

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/FiscalizacionNotificacion/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/FiscalizacionNotificacion/AddEdit.cshtml
@@ -387,5 +387,5 @@
 @* Para el control genérico de personas *@
 <div class="modal fade hide" id="mdlBuscarPersona" role="dialog"></div>
 <div class="modal fade" id="modalAddEditPersona" tabindex="-1" role="dialog"></div>
-<div class="modal fade hide" id="mdlBuscarUbigeo" role="dialog"></div>
+<div class="modal fade hide" id="personaUbigeoModal" role="dialog"></div>
 <div id="divIframe"></div>
