--- a/SIGOFCv3/Areas/THabilitante/Views/ManBalanceExtraccion/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManBalanceExtraccion/AddEdit.cshtml
@@ -128,8 +128,8 @@
                                                             <tr>
                                                                 <th colspan="24" class="text-sm-left">
                                                                     <div class="form-inline">
-                                                                        <i class="fa mx-2 fa-lg fa-file-o" style="cursor:pointer;" onclick="_EditBExtraccion.fnAddEditBExtMade_NoMade('');" data-toggle="tooltip" data-placement="top" title="Nuevo"></i>
-                                                                        <i class="fa mx-2 fa-lg fa-window-close-o" style="cursor:pointer;" onclick="_EditBExtraccion.fnDeleteBExt(null, 'BEXTRACCION_MADE_ALL');" data-toggle="tooltip" data-placement="top" title="Eliminar Todos"></i>
+                                                                        <i id="btnAddEditBExtMade_NoMade" class="fa mx-2 fa-lg fa-file-o" style="cursor:pointer;" onclick="_EditBExtraccion.fnAddEditBExtMade_NoMade('');" data-toggle="tooltip" data-placement="top" title="Nuevo"></i>
+                                                                        <i id="btnDeleteBExtMade_NoMade" class="fa mx-2 fa-lg fa-window-close-o" style="cursor:pointer;" onclick="_EditBExtraccion.fnDeleteBExt(null, 'BEXTRACCION_MADE_ALL');" data-toggle="tooltip" data-placement="top" title="Eliminar Todos"></i>
                                                                         <label style="cursor:pointer;" class="fa mx-2 fa-lg fa-file-excel-o" title="Importar Archivo" data-toggle="tooltip">
                                                                             <input type="file" style="display:none" size="60" onchange="_EditBExtraccion.fnImportBExt(event, this, 'BEXTRACCION_MADE')">
                                                                         </label>
